--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,11 @@ bootstrap/compiled.php
 app/storage/
 
 # Laravel 5 & Lumen specific
+public
 public/storage
 public/hot
+/public/css
+/public/js
 
 # Laravel 5 & Lumen specific with changed public path
 public_html/storage
